# dab-pipelines

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  databricks.yml  pyproject.toml
.claude/skills/medallion-pipeline/: SKILL.md  layer-bronze.md  layer-gold.md  layer-silver.md
.github/workflows/: ci.yml  deploy-test.yml  validate-bundle.yml
resources/: alerts.yml  dab_pipelines_etl.pipeline.yml  data_generator.job.yml  etl_machine_data.pipeline.yml  job.data_generator.yml  job.machine_load.yml  machine_data.job.yml  machine_data.pipeline.yml  machine_load.yml  machine_monitoring.dashboard.yml  pipeline.machine_data.yml  sample_job.job.yml  schemas.yml  volumes.yml
src/dab_pipelines/: README_SYNTHETIC_DATA.md  databricks_utils.py  df_utils.py  logging_config.py  main.py  synthetic_data_generator.py  synthetic_data_schemas.py
src/dab_pipelines_etl/: README.md
src/dab_pipelines_etl/machine_data/: etl_machine_data.py  gold.sql  pipeline_config.py  raw.py  silver.py
src/dab_pipelines_etl/machine_data/bronze/: _autoloader.py  machine_dim.py  sensor_facts.py
src/dab_pipelines_etl/machine_data/gold/: dim_machine.sql  dim_machine_a.py  dim_machine_daily.sql  dim_machine_h.sql  fact_sensor.sql  fact_sensor_agg.py  fact_sensor_agg.sql
src/dab_pipelines_etl/machine_data/raw/: _autoloader.py  machine_dim.py  sensor_facts.py
src/dab_pipelines_etl/machine_data/silver/: dim_machine.py  dim_machine_h.py  fact_sensor.py
src/dab_pipelines_etl/transformations/: sample_trips_dab_pipelines.py  sample_zones_dab_pipelines.py
src/dashboards/: machine_monitoring.lvdash.json
tests/: conftest.py  sample_taxis_test.py  test_df_utils.py  test_environment.py  test_synthetic_data_generator.py
